hotfix: relate right ventricle to appropiate origin

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -331,7 +331,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "b7f4b94e-ca27-4337-9467-ec04183317dc",
+       "ref": "b96c5c78-7ef8-4a40-9434-5f5353daca95",
        "rows": [
         [
          "P186",
@@ -746,7 +746,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "f46fef64-8cfb-49cd-b06d-af042305231a",
+       "ref": "ad1944a0-41a1-4d1a-9ea3-bca0258ed20e",
        "rows": [
         [
          "P186",
@@ -1124,7 +1124,7 @@
          "type": "float"
         }
        ],
-       "ref": "0d681db5-967b-4018-bb42-47938832c219",
+       "ref": "0c3045fe-61d1-4a89-8714-2f51bb9bcf83",
        "rows": [
         [
          "P186",
@@ -2506,7 +2506,7 @@
          "type": "float"
         }
        ],
-       "ref": "74438f3f-9bca-4dfb-b7d0-6203e25bcc91",
+       "ref": "42280265-b674-4c61-bfde-f76949ca0ec8",
        "rows": [
         [
          "P186",
@@ -4053,7 +4053,7 @@
          "type": "float"
         }
        ],
-       "ref": "d01256b4-27d2-4c80-87e5-ecd57ec6124e",
+       "ref": "18a8d0ff-7593-4a66-b4ef-cdbd0376c50f",
        "rows": [
         [
          "P186",
@@ -5501,7 +5501,7 @@
          "type": "string"
         }
        ],
-       "ref": "442d0694-435e-4b55-9412-061c18edc9f3",
+       "ref": "c3f3a207-1b7c-4f41-ad97-8a0c41475cf3",
        "rows": [
         [
          "0",
@@ -6086,7 +6086,7 @@
          "type": "string"
         }
        ],
-       "ref": "da4856e6-a75f-4af1-a2a7-ccececdc8d33",
+       "ref": "15f589c7-94d3-4c17-8a4f-e5c4990845ee",
        "rows": [
         [
          "0",
@@ -6640,8 +6640,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'SUMMIT', 'RVOTFREEWALL', 'RVOTSEPTUM', 'LVOTSUBVALVULAR', 'RCC', 'LCC', 'COMMISSURE'}\n",
-      "Subregions in sheet 2: {'COMMISURE', 'RVOTFREEWALL', 'RVOTSEPTUM', 'LVOTSUBVALVULAR', 'RCC', 'LCC', 'LVOTSUMMIT'}\n"
+      "Subregions in sheet 1: {'LVOTSUBVALVULAR', 'RVOTFREEWALL', 'COMMISSURE', 'RVOTSEPTUM', 'LCC', 'SUMMIT', 'RCC'}\n",
+      "Subregions in sheet 2: {'LVOTSUBVALVULAR', 'LVOTSUMMIT', 'RVOTFREEWALL', 'RVOTSEPTUM', 'COMMISURE', 'LCC', 'RCC'}\n"
      ]
     }
    ],
@@ -6889,7 +6889,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e37263e8-57e9-4db1-a58f-beb3fa67d046",
+       "ref": "8ad61bde-b093-4c17-831c-d6644797ed3d",
        "rows": [
         [
          "P186",
@@ -7561,8 +7561,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7643555",
+   "metadata": {},
+   "source": [
+    "For all the unmapped \"Right ventricle\", we can see in sheet2 that some map to 'RVOT' sub-regions (like 'RVOTSEPTUM', 'RVOTFREEWALL') and some to 'LVOT' sub-regions (like 'LVOTSEPTUM', 'LVOTSUBVALVULAR'). Yes, contrary to common sense, 'Right ventricle' can map to both LVOT and RVOT sub-regions, and thus might have different labels on Outcome_B.\n",
+    "\n",
+    "We can't use the 'SOO_chamber' column to map these, as it would be ambiguous (we would have to map some to 'RVOT' and some to 'LVOT'); so we will instead use the 'SOO' value:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "0f7c0256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping 'Right ventricle' cases using sheet2 subregion information:\n",
+      "- Found 35 'Right ventricle' cases with unmapped Outcome_B\n",
+      "- Successfully mapped 33 cases based on their SOO and subregion\n",
+      "\n",
+      "Remaining unmapped 'Right ventricle' cases:\n",
+      "  'Left coronary cusp, desde el ventriculo izquierdo': 1 occurrences - not found in sheet2 mapping\n",
+      "  'Intersenos (LV)': 1 occurrences - not found in sheet2 mapping\n"
+     ]
+    }
+   ],
+   "source": [
+    "def standardize_right_ventricle_outcome_b(df, sheet2):\n",
+    "    print(\"Mapping 'Right ventricle' cases using sheet2 subregion information:\")\n",
+    "    \n",
+    "    initial_unmapped = df['Outcome_B'].isna().sum()\n",
+    "    right_ventricle_mask = (df['Outcome_B'].isna()) & (df['SOO_chamber'] == 'Right ventricle')\n",
+    "    right_ventricle_count = right_ventricle_mask.sum()\n",
+    "    \n",
+    "    # Create mapping dictionary from sheet2 for Right ventricle cases\n",
+    "    # Map each SOO to LVOT or RVOT based on whether its subregion starts with \"LVOT\" or \"RVOT\"\n",
+    "    subregion_mapping = {}\n",
+    "    for _, row in sheet2.iterrows():\n",
+    "        soo = row['SOO']\n",
+    "        subregion = row['Simplified']\n",
+    "        \n",
+    "        if isinstance(subregion, str):\n",
+    "            if subregion.startswith('RVOT'):\n",
+    "                subregion_mapping[soo] = 'RVOT'\n",
+    "            elif subregion.startswith('LVOT'):\n",
+    "                subregion_mapping[soo] = 'LVOT'\n",
+    "            \n",
+    "    # Apply mapping only to Right ventricle rows with null Outcome_B\n",
+    "    mapped_count = 0\n",
+    "    for soo, outcome in subregion_mapping.items():\n",
+    "        mapped = ((df['Outcome_B'].isna()) & \n",
+    "                  (df['SOO_chamber'] == 'Right ventricle') & \n",
+    "                  (df['SOO'] == soo))\n",
+    "        \n",
+    "        if mapped.sum() > 0:\n",
+    "            df.loc[mapped, 'Outcome_B'] = outcome\n",
+    "            mapped_count += mapped.sum()\n",
+    "    \n",
+    "    remaining_unmapped = df['Outcome_B'].isna().sum()\n",
+    "    \n",
+    "    print(f\"- Found {right_ventricle_count} 'Right ventricle' cases with unmapped Outcome_B\")\n",
+    "    print(f\"- Successfully mapped {mapped_count} cases based on their SOO and subregion\")\n",
+    "    \n",
+    "    # List any remaining unmapped Right ventricle cases\n",
+    "    still_unmapped = (df['Outcome_B'].isna()) & (df['SOO_chamber'] == 'Right ventricle')\n",
+    "    if still_unmapped.sum() > 0:\n",
+    "        print(\"\\nRemaining unmapped 'Right ventricle' cases:\")\n",
+    "        unmapped_soos = df.loc[still_unmapped, 'SOO'].value_counts()\n",
+    "        for soo, count in unmapped_soos.items():\n",
+    "            print(f\"  '{soo}': {count} occurrences - not found in sheet2 mapping\")\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "data = standardize_right_ventricle_outcome_b(data, labels_sheet2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d7a90b",
+   "metadata": {},
+   "source": [
+    "We deal now with the remaining missing values in 'Outcome_B' and 'Outcome_C' by checking both the 'SOO' and 'SOO_chamber' columns, inspecting to which sub-region they map on sheet2, and determining for this sub-region which of the two outcomes we should assign (as noted in the comments for each):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "23049ed9",
    "metadata": {},
    "outputs": [
@@ -7570,7 +7659,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filled 60 missing Outcome_B values based on SOO_chamber\n",
+      "Filled 27 missing Outcome_B values:\n",
+      "- 25 from SOO_chamber mapping\n",
+      "- 2 from SOO mapping\n",
       "Remaining null Outcome_B values: 0\n"
      ]
     }
@@ -7578,24 +7669,42 @@
    "source": [
     "def map_missing_outcome_b(df):\n",
     "    chamber_to_outcome = {\n",
-    "        \"Right ventricle\": \"RVOT\",\n",
-    "        \"Left ventricle\": \"LVOT\",\n",
     "        \"RVOT\": \"RVOT\",\n",
     "        \"LVOT\": \"LVOT\",\n",
-    "        \"Coronary sinus\": \"LVOT\",  # From sheet2 we can see that it corersponds to subregion \"LVOTSUMMIT\"\n",
+    "        \"Left ventricle\": \"LVOT\", # From sheet2, all occurrences correspond to a subregion of \"LVOT\" (\"LCC\" or \"LVOTSUMMIT\")\n",
+    "        \"Coronary sinus\": \"LVOT\",  # From sheet2 we can see that it corresponds to subregion \"LVOTSUMMIT\"\n",
     "        \"Mitral annulus\": \"LVOT\",  # From sheet2 we can see that it corresponds to subregion \"LVOTSUBVALVULAR\"\n",
     "        \"Tricuspid annulus\": \"RVOT\"  # From sheet2 we can see that it corresponds to subregion \"RVOTSEPTUM\"\n",
     "    }\n",
     "    \n",
-    "    mask = df['Outcome_B'].isna()\n",
-    "    to_fill = df.loc[mask, 'SOO_chamber'].isin(chamber_to_outcome.keys()).sum()\n",
+    "    soo_to_outcome = {\n",
+    "        \"Left coronary cusp, desde el ventriculo izquierdo\": \"LVOT\", # From sheet2, it corresponds to subregion \"LCC\"\n",
+    "        \"Intersenos (LV)\": \"LVOT\"  # From sheet2, this corresponds to subregion \"COMMISSURE\"\n",
+    "    }\n",
     "    \n",
-    "    # Apply mapping only to rows where Outcome_B is null\n",
+    "    mask = df['Outcome_B'].isna()\n",
+    "    initial_missing = mask.sum()\n",
+    "    \n",
+    "    # Apply SOO_chamber mapping\n",
+    "    chamber_mask = df['Outcome_B'].isna()\n",
+    "    to_fill_chamber = df.loc[chamber_mask, 'SOO_chamber'].isin(chamber_to_outcome.keys()).sum()\n",
+    "    \n",
     "    for chamber, outcome in chamber_to_outcome.items():\n",
     "        df.loc[(df['Outcome_B'].isna()) & (df['SOO_chamber'] == chamber), 'Outcome_B'] = outcome\n",
+    "        \n",
+    "    # Apply SOO mapping\n",
+    "    soo_mask = df['Outcome_B'].isna()\n",
+    "    to_fill_soo = df.loc[soo_mask, 'SOO'].isin(soo_to_outcome.keys()).sum()\n",
+    "    \n",
+    "    for soo, outcome in soo_to_outcome.items():\n",
+    "        df.loc[(df['Outcome_B'].isna()) & (df['SOO'] == soo), 'Outcome_B'] = outcome\n",
     "    \n",
     "    remaining_null = df['Outcome_B'].isna().sum()\n",
-    "    print(f\"Filled {to_fill} missing Outcome_B values based on SOO_chamber\")\n",
+    "    filled_count = initial_missing - remaining_null\n",
+    "    \n",
+    "    print(f\"Filled {filled_count} missing Outcome_B values:\")\n",
+    "    print(f\"- {to_fill_chamber} from SOO_chamber mapping\")\n",
+    "    print(f\"- {to_fill_soo} from SOO mapping\")\n",
     "    print(f\"Remaining null Outcome_B values: {remaining_null}\")\n",
     "    return df\n",
     "\n",
@@ -7604,7 +7713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "3dcf8eab",
    "metadata": {},
    "outputs": [
@@ -7633,7 +7742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "64a2ebde",
    "metadata": {},
    "outputs": [
@@ -7695,7 +7804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "b014d940",
    "metadata": {},
    "outputs": [
@@ -7705,8 +7814,8 @@
      "text": [
       "=== Outcome_B (LVOT/RVOT) Distribution ===\n",
       "Class distribution among mapped values:\n",
-      "- RVOT: 139 (73.2%)\n",
-      "- LVOT: 51 (26.8%)\n",
+      "- RVOT: 118 (62.1%)\n",
+      "- LVOT: 72 (37.9%)\n",
       "Missing values: 0 (0.0%)\n",
       "\n",
       "=== Outcome_C (Specific Sub-regions) Distribution ===\n",
@@ -7741,7 +7850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "91c3d35c",
    "metadata": {},
    "outputs": [
@@ -7789,7 +7898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "8b0935da",
    "metadata": {},
    "outputs": [
@@ -7865,7 +7974,7 @@
          "type": "float"
         }
        ],
-       "ref": "6e388983-c5ed-45bf-8abc-ab6327805120",
+       "ref": "09cffa74-c696-4ace-90ea-060c8733ac24",
        "rows": [
         [
          "P186",
@@ -8816,7 +8925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "376d7c4c",
    "metadata": {},
    "outputs": [
@@ -8835,7 +8944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "c5657568",
    "metadata": {},
    "outputs": [
@@ -8873,7 +8982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "b6b8bcd2",
    "metadata": {},
    "outputs": [],
@@ -8894,7 +9003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "46bc22e2",
    "metadata": {},
    "outputs": [],
@@ -8912,7 +9021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "6ae91cdb",
    "metadata": {},
    "outputs": [],
@@ -8943,7 +9052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "03115615",
    "metadata": {},
    "outputs": [
@@ -8974,7 +9083,7 @@
          "type": "string"
         }
        ],
-       "ref": "6bd7ecca-d4af-4f74-b249-e9ceff4ca65a",
+       "ref": "a8652eb5-f0de-4850-9be0-5cf9c8dcce0e",
        "rows": [
         [
          "P173",
@@ -9069,7 +9178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "413eaa65",
    "metadata": {},
    "outputs": [
@@ -9098,7 +9207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "d2d02bd1",
    "metadata": {},
    "outputs": [
@@ -9129,11 +9238,11 @@
          "type": "string"
         }
        ],
-       "ref": "a698710b-5ac4-401f-b3f3-6a90f9679697",
+       "ref": "7db0f790-78ff-42cc-88fd-658ff774d973",
        "rows": [
         [
          "P186",
-         "RVOT",
+         "LVOT",
          "LVOTSUBVALVULAR"
         ],
         [
@@ -9183,7 +9292,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>P186</th>\n",
-       "      <td>RVOT</td>\n",
+       "      <td>LVOT</td>\n",
        "      <td>LVOTSUBVALVULAR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -9207,7 +9316,7 @@
       ],
       "text/plain": [
        "     Outcome_B        Outcome_C\n",
-       "P186      RVOT  LVOTSUBVALVULAR\n",
+       "P186      LVOT  LVOTSUBVALVULAR\n",
        "P268      RVOT       RVOTSEPTUM\n",
        "P286      LVOT              LCC\n",
        "P185      LVOT  LVOTSUBVALVULAR"
@@ -9234,7 +9343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "b291d129",
    "metadata": {},
    "outputs": [
@@ -9263,7 +9372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "46e6feca",
    "metadata": {},
    "outputs": [
@@ -9299,7 +9408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "6a5916b3",
    "metadata": {},
    "outputs": [
@@ -9329,7 +9438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "4db19180",
    "metadata": {},
    "outputs": [
@@ -9360,11 +9469,11 @@
          "type": "string"
         }
        ],
-       "ref": "57e19aae-391b-4892-ae33-3ba32d4346bc",
+       "ref": "433454e3-92a4-490a-ba9a-9e77b974b73a",
        "rows": [
         [
          "P172",
-         "RVOT",
+         "LVOT",
          "LVOTSUBVALVULAR"
         ],
         [
@@ -9379,7 +9488,7 @@
         ],
         [
          "P212",
-         "RVOT",
+         "LVOT",
          "LVOTSUBVALVULAR"
         ],
         [
@@ -9434,7 +9543,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>P172</th>\n",
-       "      <td>RVOT</td>\n",
+       "      <td>LVOT</td>\n",
        "      <td>LVOTSUBVALVULAR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -9449,7 +9558,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>P212</th>\n",
-       "      <td>RVOT</td>\n",
+       "      <td>LVOT</td>\n",
        "      <td>LVOTSUBVALVULAR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -9478,10 +9587,10 @@
       ],
       "text/plain": [
        "     Outcome_B        Outcome_C\n",
-       "P172      RVOT  LVOTSUBVALVULAR\n",
+       "P172      LVOT  LVOTSUBVALVULAR\n",
        "P294      LVOT       LVOTSUMMIT\n",
        "P076      LVOT  LVOTSUBVALVULAR\n",
-       "P212      RVOT  LVOTSUBVALVULAR\n",
+       "P212      LVOT  LVOTSUBVALVULAR\n",
        "P227      RVOT     RVOTFREEWALL\n",
        "P082      LVOT       LVOTSUMMIT\n",
        "P128      RVOT       RVOTSEPTUM\n",
@@ -9510,7 +9619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "00ab18e6",
    "metadata": {},
    "outputs": [
@@ -9537,7 +9646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "251438d6",
    "metadata": {},
    "outputs": [
@@ -9572,7 +9681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "0569bea5",
    "metadata": {},
    "outputs": [
@@ -9603,7 +9712,7 @@
          "type": "string"
         }
        ],
-       "ref": "1efb49fd-d62c-47db-9915-fb96df513055",
+       "ref": "32c5acb1-c9ab-4ea3-a317-ce92c9a7c84f",
        "rows": [
         [
          "P290",
@@ -9672,7 +9781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "18624adc",
    "metadata": {},
    "outputs": [
@@ -9701,7 +9810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "7676c813",
    "metadata": {},
    "outputs": [
@@ -9729,7 +9838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "f7a33c60",
    "metadata": {},
    "outputs": [
@@ -9760,7 +9869,7 @@
          "type": "string"
         }
        ],
-       "ref": "a786d19c-23a9-48f3-b6b3-337ffa639cb0",
+       "ref": "4cabdc28-0f17-4f0b-a616-187f4ca563b4",
        "rows": [
         [
          "P285",
@@ -9829,7 +9938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "89222715",
    "metadata": {},
    "outputs": [
@@ -9858,7 +9967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "80af8947",
    "metadata": {},
    "outputs": [
@@ -9886,7 +9995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "0d0b5c18",
    "metadata": {},
    "outputs": [
@@ -9914,7 +10023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "6474be27",
    "metadata": {},
    "outputs": [
@@ -10023,7 +10132,7 @@
          "type": "integer"
         }
        ],
-       "ref": "acba262c-7083-4b76-bc45-6fbbc8891ed3",
+       "ref": "35aa05c4-0f58-4e12-b4a9-dd5608fe677d",
        "rows": [
         [
          "P245",
@@ -10345,7 +10454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "d8d40762",
    "metadata": {},
    "outputs": [
@@ -10366,7 +10475,7 @@
    "id": "e1bb0b68",
    "metadata": {},
    "source": [
-    "We will later relate each patient's demographic data with all of its ECGs (using the still preserved `PXXX` identifier), turning each ECG+demographic data pair into a single row in the final dataframe that we will use to train the classification models. This means that we will have 173 * N_ECGs rows in the final dataframe, duplicating the demographic data to complete each \"patient case\"."
+    "We will later relate each patient's demographic data with all of its ECGs (using the still preserved `PXXX` identifier), turning each ECG+demographic data pair into a single row in the final dataframe that we will use to train the classification models. This means that we will have 173 * N_ECGs rows in the final dataframe, duplicating the demographic data to complete each \"patient case\" (as explained in setion 1)."
    ]
   },
   {
