ecg_flattened_samples

--- a/data_cleaning/signal_data.ipynb
+++ b/data_cleaning/signal_data.ipynb
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef75c17",
+   "id": "b604814b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +113,34 @@
     "    return pd.DataFrame(rows)\n",
     "\n",
     "result_df_leads = unpack_structures_expand_ecg(data)\n",
-    "display(result_df_leads)\n",
-    "\n",
+    "display(result_df_leads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdeb9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %%\n",
     "result_df__leads_encoded = pd.get_dummies(result_df_leads, columns=['anatomical region', 'position'])\n",
-    "display(result_df__leads_encoded)\n",
-    "\n",
+    "display(result_df__leads_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "512e781e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %%\n",
     "# Selecciona las columnas de las 12 derivaciones y el identificador de paciente\n",
     "lead_columns = ['patient', 'I', 'II', 'III', 'AVR', 'AVL', 'AVF', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6']\n",
     "df_leads_only = result_df_leads[lead_columns].copy()\n",
     "display(df_leads_only)\n",
     "\n",
-    "# %%\n",
-    "print(df_leads_only['patient'][14832])\n",
     "\n",
     "# %%\n",
     "'''# Expand each lead's list of samples into separate columns\n",
@@ -154,10 +168,27 @@
     "# %% [markdown]\n",
     "# Ara segmentarem els ecgs per poder fer l'alignment\n",
     "\n",
-    "# %%\n",
+    "# %%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a09c99ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install git+https://github.com/guillermo-jimenez/sak.git\n",
-    "!pip install timm\n",
-    "\n",
+    "!pip install timm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5675509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %%\n",
     "#Example with ECG segmentation\n",
     "\n",
@@ -172,8 +203,16 @@
     "import numpy as np\n",
     "models_ECG = [\n",
     "    torch.load(f\"modelos/model.{i+1}\") for i in range(5)\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4888589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# Predict_ecg stroing all segmentations\n",
     "\n",
@@ -315,8 +354,16 @@
     "    # Crear vectores de tiempo segmentados para cada onda\n",
     "    time_QRS = time_vector[segmentation[1].astype(bool)]\n",
     "\n",
-    "    return segmentation,time_QRS\n",
-    "\n",
+    "    return segmentation,time_QRS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2561207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# Segmentation por patient 23047\n",
     "\n",
@@ -327,8 +374,16 @@
     "    ecg_signals1.append(df_leads_only[lead][23047])\n",
     "    \n",
     "ecg_signals1 = np.asarray(ecg_signals1).T\n",
-    "print(ecg_signals1.shape)\n",
-    "\n",
+    "print(ecg_signals1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f3d7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# We filter the signal (code profe) and we apply the function predict_ecg.\n",
     "\n",
@@ -346,20 +401,22 @@
     "np.set_printoptions(threshold=np.inf)\n",
     "segmentation1 = sak.signal.interpolate.interp1d(segmentation_250, ecg_signals1.shape[0], axis=-1, kind=\"nearest\")\n",
     "\n",
-    "\n",
     "# %% [markdown]\n",
     "# We print what the segmentation returns. It is a binarized array where 1 indicates the possible/correct location of the desired segmed. Segmentation 1 is composed by three arays where the first one indicates the locations of the P wave, the second array indicated the locations of the QRS complex and the last array indicates the lcoations of the waves T. \n",
-    "\n",
+    "print(segmentation1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "479c2969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %%\n",
     "import numpy as np\n",
-    "\n",
-    "print(segmentation1)\n",
-    "\n",
-    "\n",
     "# %% [markdown]\n",
     "# We plot the segmented signal\n",
-    "\n",
-    "# %%\n",
     "import matplotlib.pyplot as plt\n",
     "fig, ax = plt.subplots(4,3)\n",
     "row = 0\n",
@@ -374,8 +431,16 @@
     "    if col >= 3:\n",
     "        row += 1\n",
     "        col = 0\n",
-    "    plt.plot()\n",
-    "\n",
+    "    plt.plot()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfcdb64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# # PLEASE HAVE FAITH THIS SHOULD WORK\n",
     "# una mica d'anims per sobreviure i fer aquest treball\n",
@@ -495,8 +560,16 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82bf2de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# We see the segmentation is done correctly. Now we import the csv created with the segmentations done for all ecg signals\n",
     "\n",
@@ -504,8 +577,16 @@
     "ecg = pickle.load(open('../segmentation_results.pkl', 'rb'))\n",
     "\n",
     "ecg = pd.DataFrame(ecg)\n",
-    "display(ecg.head())\n",
-    "\n",
+    "display(ecg.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c786ebf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# We choose to compute time shift with v6 reference as it is the lead closest to the left ventricle, which means that the R peak will be best detected.\n",
     "\n",
@@ -534,9 +615,17 @@
     "# Mostrar resultados\n",
     "for idx, row in ecg.iterrows():\n",
     "    print(f\"Patient: {row['patient']}, Lead: {row['lead']}, Time shift: {row['time_shift']:.4f} seconds\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08c57949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "\n",
-    "# %%\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -580,16 +669,31 @@
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f1d66f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# Just to check if the shift is done correctly\n",
     "\n",
     "# %%\n",
     "plot_shifted_ecg(ecg, patient_index=0) \n",
-    "plot_shifted_ecg(ecg, patient_index=23455)\n",
-    "\n",
-    "\n",
+    "plot_shifted_ecg(ecg, patient_index=23455)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a53ce494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %% [markdown]\n",
     "# We put a new column to the df_leads_only the time shift calculated\n",
     "\n",
@@ -693,7 +797,16 @@
     "# We see that it is correctly stored\n",
     "\n",
     "# %% [markdown]\n",
-    "# Now we have to do a dataframe to store the samples divided by columns\n",
+    "# Now we have to do a dataframe to store the samples divided by columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef75c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# %%\n",
     "from tqdm import tqdm\n",
@@ -729,12 +842,6 @@
     "print(\" Archivo guardado como 'ecg_flattened_samples.pkl'\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da0207af",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
