wip: some patient IDs seem to have invalid or missing ecgs

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -334,7 +334,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "05271122-0261-4fe9-9705-09fad2e851ee",
+       "ref": "4754882d-eed6-4adc-aba6-23d8be54ef96",
        "rows": [
         [
          "P186",
@@ -749,7 +749,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "bdba922f-5ab1-4bee-b714-76cb9d950847",
+       "ref": "8a718a8f-df96-4e1f-af9d-d99c9f4c0871",
        "rows": [
         [
          "P186",
@@ -1127,7 +1127,7 @@
          "type": "float"
         }
        ],
-       "ref": "700a7fbe-6f3f-4fc3-9056-507fa4b8ae17",
+       "ref": "0107cb11-6c58-4fd2-9115-4c830881f623",
        "rows": [
         [
          "P186",
@@ -2509,7 +2509,7 @@
          "type": "float"
         }
        ],
-       "ref": "6ce08b7b-2408-4600-95fc-480e48a4c655",
+       "ref": "30b7fb6c-13bf-4746-867a-b6d93ae6c478",
        "rows": [
         [
          "P186",
@@ -4056,7 +4056,7 @@
          "type": "float"
         }
        ],
-       "ref": "771819be-dc2c-4eaf-a224-440cb7167474",
+       "ref": "4f1ed8b1-b812-4902-9f28-963f5164ab68",
        "rows": [
         [
          "P186",
@@ -5504,7 +5504,7 @@
          "type": "string"
         }
        ],
-       "ref": "b1e647b4-73d8-401b-94fb-60549792614b",
+       "ref": "c495e8e0-e820-416c-aafa-01db0fedea04",
        "rows": [
         [
          "0",
@@ -6089,7 +6089,7 @@
          "type": "string"
         }
        ],
-       "ref": "669dc423-4bf2-4c8c-89bd-2d51527634ec",
+       "ref": "bfab4c49-9549-4ecd-aa92-6b1ab734faa9",
        "rows": [
         [
          "0",
@@ -6643,8 +6643,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'RVOTSEPTUM', 'LCC', 'RVOTFREEWALL', 'LVOTSUBVALVULAR', 'SUMMIT', 'COMMISSURE', 'RCC'}\n",
-      "Subregions in sheet 2: {'RVOTSEPTUM', 'LVOTSUMMIT', 'COMMISURE', 'LCC', 'RVOTFREEWALL', 'LVOTSUBVALVULAR', 'RCC'}\n"
+      "Subregions in sheet 1: {'RVOTFREEWALL', 'COMMISSURE', 'RVOTSEPTUM', 'LVOTSUBVALVULAR', 'RCC', 'LCC', 'SUMMIT'}\n",
+      "Subregions in sheet 2: {'RVOTFREEWALL', 'RVOTSEPTUM', 'COMMISURE', 'LVOTSUMMIT', 'LVOTSUBVALVULAR', 'RCC', 'LCC'}\n"
      ]
     }
    ],
@@ -6892,7 +6892,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e0ada2d9-8e1a-41b0-a049-64ccd1f82527",
+       "ref": "a2dd0b54-0ff2-449d-9273-84862c666ab0",
        "rows": [
         [
          "P186",
@@ -7979,7 +7979,7 @@
          "type": "float"
         }
        ],
-       "ref": "4fa001c4-18f6-4377-9c00-83626334698f",
+       "ref": "36bb4a61-84bc-4cdd-a598-7db6e25a64bf",
        "rows": [
         [
          "P186",
@@ -9089,7 +9089,7 @@
          "type": "string"
         }
        ],
-       "ref": "4a05b1c4-308b-467d-9e78-3f1516f406bd",
+       "ref": "758618ae-a76e-4707-90b5-594730201c63",
        "rows": [
         [
          "P173",
@@ -9244,7 +9244,7 @@
          "type": "string"
         }
        ],
-       "ref": "4aff40a3-0e23-4a18-b22d-7688017f53ec",
+       "ref": "596ceecb-4ebe-4269-96f2-315c04faf870",
        "rows": [
         [
          "P186",
@@ -9475,7 +9475,7 @@
          "type": "string"
         }
        ],
-       "ref": "18435577-9fcb-496b-ac6d-f221e148938d",
+       "ref": "f21c5a3b-efa3-43a8-9293-b97cf3c1c5c0",
        "rows": [
         [
          "P172",
@@ -9718,7 +9718,7 @@
          "type": "string"
         }
        ],
-       "ref": "f278e5ea-0b8c-4cf9-be35-f30309a51813",
+       "ref": "f8a08cd7-18ef-4ce0-8beb-19fd1fded0a9",
        "rows": [
         [
          "P290",
@@ -9875,7 +9875,7 @@
          "type": "string"
         }
        ],
-       "ref": "95739b62-51af-42d6-8403-c1fb99f9b69e",
+       "ref": "dfd1e328-e37c-41f0-bc3b-803541122a05",
        "rows": [
         [
          "P285",
@@ -10138,7 +10138,7 @@
          "type": "integer"
         }
        ],
-       "ref": "ea71e705-5bb9-4167-86a0-d5770eaf5516",
+       "ref": "e3e6b8dc-ddf0-4fc5-b62f-4f073ac0b9c3",
        "rows": [
         [
          "P245",
@@ -10595,7 +10595,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "32abd8e8-49e7-45ae-930b-13a9a765340f",
+       "ref": "4440075b-f8c6-447a-9225-e356a74b6070",
        "rows": [
         [
          "P186",
@@ -10878,6 +10878,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total patients in ECGs data: 190\n",
+      "Unique Patient IDs in ECGs data: 190\n"
+     ]
     }
    ],
    "source": [
@@ -10885,7 +10893,11 @@
     "ecgs_data = pd.DataFrame(ecgs_data).T\n",
     "\n",
     "# Loading the .pkl file and displaying the first few rows\n",
-    "display(ecgs_data.head())"
+    "display(ecgs_data.head())\n",
+    "# Count how many patients we have\n",
+    "print(f\"Total patients in ECGs data: {ecgs_data.shape[0]}\")\n",
+    "# Count unique Patient IDs (using the index since that contains the patient identifiers)\n",
+    "print(f\"Unique Patient IDs in ECGs data: {len(ecgs_data.index.unique())}\")"
    ]
   },
   {
@@ -10898,10 +10910,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "1dbd9cc9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 181 patients with valid ECG data\n",
+      "Found 9 patients with missing or empty ECG data:\n",
+      "  Patients missing ECG data: P075, P076, P128, P143, P151, P172, P173, P227, P277\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
@@ -10932,7 +10953,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "78ec5314-6bca-45e5-bea8-440ad6f41e71",
+       "ref": "17fdedca-e731-4013-a0c6-8c31f05f7371",
        "rows": [
         [
          "0",
@@ -11430,28 +11451,118 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique patients in ECGs data: 181\n",
+      "Total patient IDs in ECGs data: 181\n"
+     ]
     }
    ],
    "source": [
     "def unpack_structures(data):\n",
     "    rows = []\n",
+    "    patients_with_data = set()\n",
+    "    patients_missing_data = set()\n",
+    "    \n",
     "    for patient_id, structures in data['Structures'].items():\n",
-    "        if isinstance(structures, dict):\n",
+    "        if isinstance(structures, dict) and structures:  # Check if structures is a non-empty dict\n",
+    "            has_ecg = False\n",
     "            for anatomical_region, positions_dict in structures.items():\n",
-    "                for position, ecg_dict in positions_dict.items():\n",
-    "                    rows.append({\n",
-    "                        'patient': patient_id,\n",
-    "                        'anatomical region': anatomical_region,\n",
-    "                        'position': position,\n",
-    "                        'ecg': ecg_dict  # Containing the 12 leads in a nested dictionary\n",
-    "                    })\n",
+    "                if isinstance(positions_dict, dict) and positions_dict:  # Check if positions_dict is a non-empty dict\n",
+    "                    for position, ecg_dict in positions_dict.items():\n",
+    "                        if ecg_dict:  # Check if ecg_dict is not empty\n",
+    "                            rows.append({\n",
+    "                                'patient': patient_id,\n",
+    "                                'anatomical region': anatomical_region,\n",
+    "                                'position': position,\n",
+    "                                'ecg': ecg_dict  # Containing the 12 leads in a nested dictionary\n",
+    "                            })\n",
+    "                            has_ecg = True\n",
+    "            \n",
+    "            if has_ecg:\n",
+    "                patients_with_data.add(patient_id)\n",
+    "            else:\n",
+    "                patients_missing_data.add(patient_id)\n",
+    "        else:\n",
+    "            patients_missing_data.add(patient_id)\n",
+    "    \n",
+    "    # Log information about missing patients\n",
+    "    print(f\"Found {len(patients_with_data)} patients with valid ECG data\")\n",
+    "    print(f\"Found {len(patients_missing_data)} patients with missing or empty ECG data:\")\n",
+    "    if patients_missing_data:\n",
+    "        print(f\"  Patients missing ECG data: {', '.join(sorted(patients_missing_data))}\")\n",
+    "    \n",
     "    return pd.DataFrame(rows)\n",
     "\n",
+    "# Use the improved function\n",
     "ecgs = unpack_structures(ecgs_data)\n",
     "display(ecgs)\n",
     "\n",
+    "# Count how many unique values of \"patient\" column we have\n",
+    "unique_patients = ecgs['patient'].nunique()\n",
+    "print(f\"Unique patients in ECGs data: {unique_patients}\")\n",
+    "print(f\"Total patient IDs in ECGs data: {len(ecgs['patient'].unique())}\")\n",
+    "\n",
     "# Unload the previous data to free memory\n",
     "del ecgs_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca849088",
+   "metadata": {},
+   "source": [
+    "This represents all ECGs from all patients. But note that, after cleaning and preprocessing the demographic data, we have 173 patients preserved out of the starting ones. We will remove now already all ECGs that correspond to patients that we have already dropped:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5fe86b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ECG filtering statistics:\n",
+      "- 173 patients in demographic data\n",
+      "- 181 patients in ECG data\n",
+      "- 12 patients were dropped from ECG data\n",
+      "  Dropped patients: P082, P164, P185, P186, P212, P268, P281, P285, P286, P290, P294, P295\n",
+      "- ECG records reduced from 29153 to 25094\n",
+      "- 4059 ECG records were removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pick all patients in \"data\" and all patients in ecgs. find those that are not in data and remove them from ecgs\n",
+    "\n",
+    "def filter_ecgs_by_existing_patients(ecgs_df, demographic_df):\n",
+    "    patients_in_demographic = set(demographic_df.index)\n",
+    "    patients_in_ecg = set(ecgs_df['patient'].unique())\n",
+    "    \n",
+    "    dropped_patients = patients_in_ecg - patients_in_demographic\n",
+    "    initial_ecg_count = len(ecgs_df)\n",
+    "    filtered_ecgs = ecgs_df[ecgs_df['patient'].isin(patients_in_demographic)].copy()\n",
+    "    final_ecg_count = len(filtered_ecgs)\n",
+    "    \n",
+    "    print(f\"ECG filtering statistics:\")\n",
+    "    print(f\"- {len(patients_in_demographic)} patients in demographic data\")\n",
+    "    print(f\"- {len(patients_in_ecg)} patients in ECG data\")\n",
+    "    print(f\"- {len(dropped_patients)} patients were dropped from ECG data\")\n",
+    "    if dropped_patients:\n",
+    "        print(f\"  Dropped patients: {', '.join(sorted(dropped_patients))}\")\n",
+    "    print(f\"- ECG records reduced from {initial_ecg_count} to {final_ecg_count}\")\n",
+    "    print(f\"- {initial_ecg_count - final_ecg_count} ECG records were removed\")\n",
+    "    \n",
+    "    return filtered_ecgs\n",
+    "\n",
+    "\n",
+    "ecgs = filter_ecgs_by_existing_patients(ecgs, data)"
    ]
   },
   {
